Updated VerifierDataService documentation